[project]
name = "sdxl-ipex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compel>=2.3.1",
    "diffusers>=0.37.1",
    "torch>=2.11.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/xpu"
