[project]
name = "sdxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "compel>=2.3.1",
    "diffusers>=0.37.1",
    "duckdb>=1.5.3",
    "prompt-toolkit>=3.0.52",
    "torch>=2.11.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.26.0",
    "transformers<5.6.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/xpu"
